--- a/client2/src/components/pages/courses/Courses.scss
+++ b/client2/src/components/pages/courses/Courses.scss
@@ -14,9 +14,33 @@
     }
     @media(max-width: 576px) {
       font-size: 28px;
+      margin-bottom: 20px;
     }
     margin-bottom: 50px;
   }
+
+  .courses__category {
+    display: flex;
+    flex-wrap: wrap;
+    width: 70%;
+    margin: auto;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 30px;
+
+    .courses__category__item {
+      font-size: 20px;
+      cursor: pointer;
+      transition: all .5s ease;
+
+      &:hover {
+        color: #1266f1;
+        text-decoration: underline;
+        transition: all .5s ease;
+      }
+    }
+  }
+
 
   &__card {
     box-shadow: 0 0 5px beige;
@@ -55,8 +79,8 @@
 
   &__img {
     img {
-      max-width: 100%;
-      height: 100%;
+      min-width: 100%;
+      height: 300px;
       transform: scale(1);
       transition: 500ms;
     }
@@ -86,7 +110,7 @@
       margin: 0;
     }
 
-    div {
+    .more__btn__student {
       display: flex;
       justify-content: space-between;
       align-items: center;
