--- a/client2/src/components/pages/news/News.scss
+++ b/client2/src/components/pages/news/News.scss
@@ -39,8 +39,8 @@
 
   &__img {
     img {
-      max-width: 100%;
-      height: 100%;
+      min-width: 100%;
+      height: 300px;
       transform: scale(1);
       transition: 500ms;
     }
@@ -61,6 +61,11 @@
       font-size: 18px;
       font-weight: 400;
       color: #878787;
+    }
+
+    .create__markup {
+      display: flex;
+      flex-direction: column;
     }
 
 
